# cppgl-boilerplate

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt
src/platform/: CMakeLists.txt  window.cpp  window.hpp
